# Tutorial

./: Python_web mod3_dz.py  Python_web mod3_dz2.py  index.html  mod6_dz_sort.py  modul_10_dz.py  modul_11_dz.py  modul_12_dz.py  modul_8_dz.py  modul_9_dz.py
FinalProject/: Bot.py  (+2 more)
PythonWeb_dz_11_old/: main.py  pyproject.toml
PythonWeb_dz_11_old/dz11/: schemas.py
PythonWeb_dz_11_old/dz11/database/: models.py
PythonWeb_dz_11_old/dz11/repository/: contacts.py
PythonWeb_dz_11_old/dz11/routes/: contacts.py
PythonWeb_dz_11_old/migrations/versions/: 7b61284461e0_init.py
PythonWeb_dz_13/: main.py  pyproject.toml  test.py
PythonWeb_dz_13/Part1/: main.py
PythonWeb_dz_13/Part1/dz11/database/: db.py  models.py
PythonWeb_dz_13/Part1/dz11/repository/: users.py
PythonWeb_dz_13/Part1/dz11/routes/: auth.py  contacts.py  users.py
PythonWeb_dz_13/Part1/dz11/services/: auth.py  email.py
PythonWeb_dz_13/Part2/mysite/copysite/: admin.py  forms.py  models.py  views.py
PythonWeb_dz_13/Part2/mysite/copysite/migrations/: 0001_initial.py  0002_alter_author_location_alter_tag_name.py  0004_remove_author_created_remove_quotes_created_at.py  0006_alter_author_born.py
PythonWeb_dz_13/Part2/mysite/mysite/: settings.py
PythonWeb_dz_13/Part2/mysite/users/: forms.py
PythonWeb_dz_13/dz11/repository/: users.py
PythonWeb_dz_13/dz11/routes/: auth.py
PythonWeb_dz_13/dz11/services/: auth.py
PythonWeb_dz_13/migrations/versions/: c8b1b73c45e1_init.py
PythonWeb_dz_13/postgres-data/base/13481/: pg_internal.init
PythonWeb_dz_13/postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16403  16411  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
PythonWeb_dz_13/postgres-data/global/: pg_control  pg_internal.init
PythonWeb_dz_13/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
PythonWeb_dz_13/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
PythonWeb_dz_14_old/: README.md  main.py  pyproject.toml  Командс.txt
PythonWeb_dz_14_old/docs/: conf.py  test.py
PythonWeb_dz_14_old/docs/_build/doctrees/: environment.pickle  index.doctree
PythonWeb_dz_14_old/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
PythonWeb_dz_14_old/docs/_build/html/_sources/: index.rst.txt
PythonWeb_dz_14_old/dz11/database/: db.py
PythonWeb_dz_14_old/dz11/repository/: contacts.py  users.py
PythonWeb_dz_14_old/dz11/routes/: auth.py  contacts.py  users.py
PythonWeb_dz_14_old/dz11/services/: auth.py  email.py
dz_2_poetry_final_project/dz_2_poetry_final_project/: pyproject.toml
(+107 files in other folders)
