[tool.poetry]
name = "dz11"
version = "0.1.0"
description = ""
authors = ["malychokd <127889510+malychokd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dz11"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
