[tool.poetry]
name = "DZ_12"
version = "0.1.0"
description = "RestAPI Authentication and Authorization for storing and managing contacts"
authors = ["Malychok Denys"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.7"
alembic = "^1.12.0"
pydantic = "^2.4.2"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"