[tool.poetry]
name = "dz-2-poetry-final-project"
version = "0.1.0"
description = ""
authors = ["malychokd <127889510+malychokd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dz_2_poetry_final_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
